force-app/main/default/objects/Launchpad__Grant__c/Launchpad__Grant__c.object-meta.xml
<CustomObject>
    <label>Grant</label>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Grant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>