force-app/main/default/objects/Launchpad__Grant__c/fields/Funds_Encumbered__c.field-meta.xml
<CustomField>
    <fullName>Funds_Encumbered__c</fullName>
    <label>Funds Encumbered</label>
    <summarizedField>Project__c.Funds_Remaining__c</summarizedField>
    <summaryForeignKey>Project__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>