force-app/main/default/objects/Launchpad__Grant__c/fields/Funds_Expended__c.field-meta.xml
<CustomField>
    <fullName>Funds_Expended__c</fullName>
    <label>Funds Expended</label>
    <summarizedField>Project__c.Funds_Used__c</summarizedField>
    <summaryForeignKey>Project__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>