force-app/main/default/objects/Launchpad__Grant__c/fields/Funds_Unencumbered__c.field-meta.xml
<CustomField>
    <fullName>Funds_Unencumbered__c</fullName>
    <formula>Amount__c -  Funds_Encumbered__c -  Funds_Expended__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funds Unencumbered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>