force-app/main/default/objects/Launchpad__Grant__c/fields/Percentage_Funds_Expended__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Funds_Expended__c</fullName>
    <formula>Funds_Expended__c /  Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Funds Expended</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>