force-app/main/default/objects/Launchpad__Grant__c/listViews/Launchpad__Active_Grants.listView-meta.xml
<ListView>
    <fullName>Launchpad__Active_Grants</fullName>
    <columns>NAME</columns>
    <columns>Launchpad__Grant_Name__c</columns>
    <columns>Launchpad__Funding_Stream_Amount__c</columns>
    <columns>Launchpad__Active__c</columns>
    <columns>Launchpad__Grant_Year_Start__c</columns>
    <columns>Launchpad__Grant_Year_End__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Launchpad__Active__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Active Grants</label>
</ListView>