force-app/main/default/objects/Launchpad__Grant__c/listViews/Launchpad__All.listView-meta.xml
<ListView>
    <fullName>Launchpad__All</fullName>
    <columns>NAME</columns>
    <columns>Launchpad__Grant_Name__c</columns>
    <columns>Launchpad__Funding_Stream_Amount__c</columns>
    <columns>Launchpad__Grant_Funds_Encumbered__c</columns>
    <columns>Launchpad__Grant_Funds_Expended__c</columns>
    <columns>Launchpad__Total_Expended__c</columns>
    <columns>Launchpad__Percentage_Funding_Expended__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>